# agent_provacateur

./: .gitignore  A2A_MCP.md  BRIDGEIT_API.md  CHANGES.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile.mcp  LICENSE  PHASE2_XML_IMPLEMENTATION.md  README.md  coding_guidelines.md  docker-compose.enhanced.yml  main.py  phase2_implementation.md  project_prd.md  pyproject.toml  xml_agent_cli.py  xml_cli.py
.github/: PULL_REQUEST_TEMPLATE.md
docs/: README.md  port_management.md
entity_detector_mcp/: .gitignore  CHANGELOG.md  README.md  TESTING.md  WORK_SUMMARY.md  jest.config.js  package-lock.json  package.json  tsconfig.test.json
examples/: cisco_router_guide.xml  research_document.xml  sample.xml  sample_research.md  sample_rules.json  test_claims.xml  text_document_graphrag.py
frontend/: .gitignore  CHANGES.md  README-COMPONENTS.md  README.md  build_number.txt  package-lock.json  package.json  server.py  test_simple_upload.html
graphrag_mcp/: .env.example  Dockerfile  README.md  docker-compose.yml  package.json  tsconfig.json
graphrag_mcp_py/: Dockerfile  ENHANCED_ENTITY_LINKING_SUMMARY.md  ENTITY_LINKING_ENHANCEMENT.md  IMPLEMENTATION_SUMMARY.md  PHASE3B_SUMMARY.md  README.md  docker-compose.yml  enhanced-entity-linking-summary.txt  requirements.txt  setup.py
logs/: .gitignore
monitoring/: PHASE1.md  README.md  cleanup.sh  docker-compose.yml  prometheus.yml  run_with_metrics.sh  start.sh  test_datasource.py  test_metrics.py
scripts/: README.md  all_services.py  ap.sh  ap_web_search.sh  cisco_command_extractor.py  cisco_xml_agent.py  cleanup_all.sh  goal_refiner_cli.py  manage_web_search.sh  run_enhanced_mcp_server.sh  run_enhanced_stack.sh  run_goal_refiner_demo.py  run_graphrag_mcp.sh  run_graphrag_mcp_py.sh  run_tests.py  run_tests.sh  setup_env.sh  start_ap.sh  start_frontend.sh  start_servers.sh  stop_frontend.sh  stop_graphrag_mcp_py.sh  test_component_library.sh  test_enhanced_mcp.py  test_entity_detector.sh  test_goal_refiner_xml.py  test_phase3a_readiness.sh  test_web_search.py  test_xml_command_agent.py  unified_xml_cli.py  update_deps.sh  upload_cisco_guide.py  utils.sh  xml_agent_cli.py  xml_cli.py  xml_command_agent.py  xml_utils.py
tests/: component-library-test.js  conftest.py  document_test.py  sample_document_workflow.py  sample_workflow.py  test_a2a_messaging.py  test_agent_base.py  test_agent_basic.py  test_backend_api.py  test_cli_research.py  test_doc_agent.py  test_document_list.md  test_document_loader.py  test_document_processing.py  test_entity_linking.py  test_frontend_backend_integration.py  test_frontend_server.py  test_goal_refiner.py  test_graphrag_client.py  test_graphrag_mcp_integration.py  test_graphrag_service.py  test_integration.py  test_main.py  test_research_supervisor.py  test_source_model.py  test_supervisor_goal_processing.py  test_text_graphrag_agent.py  test_xml_agent.py  test_xml_agent_attribution.py  test_xml_agent_cli_paths.py  test_xml_agent_enhanced.py  test_xml_attribution.py  test_xml_cli.py  test_xml_cli_validation.py  test_xml_docbook_validation.py  test_xml_graphrag_agent.py  test_xml_integration.py  test_xml_parser.py
web_search_mcp/: .env.example  .gitignore  CURRENT_STATUS.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  claude_desktop_config.json  package-lock.json  (+2 more)
(+196 files in other folders)
