[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-provocateur"
version = "0.1.0"
description = "Agents for research"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.0",
    "pydantic>=1.10.0,<2.0.0",
    "httpx>=0.25.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.0.0",
    "ruff>=0.0.0",
]
redis = [
    "redis>=4.5.0",
]

[tool.setuptools]
packages = ["agent_provocateur"]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"

[project.scripts]
ap-server = "agent_provocateur.main:main"
ap-client = "agent_provocateur.cli:main"
ap-workflow = "agent_provocateur.sample_workflow:main"
