[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-provocateur"
version = "0.1.0"
description = "Agents for research"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.0",
    "pydantic>=1.10.0,<2.0.0",
    "httpx>=0.25.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.0.0",
    "ruff>=0.0.0",
    "xmldiff>=2.6.0",  # For XML comparison in tests
]
redis = [
    "redis>=4.5.0",
]
llm = [
    "ollama>=0.1.0",
]
bridgeit = [
    "openai>=1.0.0",
    "requests>=2.28.0",
    "python-dotenv>=0.21.0",
]
monitoring = [
    "prometheus-client>=0.14.0",
]
xml = [
    "lxml>=4.9.0",  # Fast XML processing
    "xmlschema>=2.0.0",  # XML Schema validation
    "defusedxml>=0.7.1",  # XML security
]

[tool.setuptools]
packages = ["agent_provocateur"]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = "test_*.py"

[project.scripts]
ap-server = "agent_provocateur.main:main"
ap-client = "agent_provocateur.cli:main"
ap-workflow = "agent_provocateur.sample_workflow:main"
ap-llm = "agent_provocateur.llm_cli:main"
